Fix flow chuyển gen ảnh xuống BE - ký CTS/HSM/OTP

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -647,13 +647,13 @@
       <div style="position: relative;">
           <img [src]='this.srcMark' style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
       </div>
-      <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+      <!-- <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
           <div style="width: 165px;">
               <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign_by_cert' | translate}}</div>
               <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
               <div style="z-index: 2;text-align: left;">{{'tax_code' | translate}}: {{cardId}}</div>
               <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
           </div>
-      </div>
+      </div> -->
     </div>
 </div>
