fix lỗi ký hsm ko đóng dấu

--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -47,22 +47,25 @@
 </div>
 
 <div class="signature-container" id="export-html-ekyc" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
-    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <!-- <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign.eKYC' | translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'user.sign' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'verified.cardid' | translate}}: {{cardId}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
-    </div>
+    </div> -->
+    <div></div>
 </div>
 
+<!-- HSM -->
 <div class="signature-container" id="export-html-hsm1" style="min-height: 80px;display: flex; font-size: 9px">
-    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <!-- <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</span>
-    </div>
+    </div> -->
+    <div></div>
 </div>
 
 <!--Ký CTS ko có con dấu-->
