--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -189,7 +189,7 @@
 
 // test
 .ck-da-keo {
-  border: 1px solid #106DB6;
+  border: 1px dashed #6B6B6B;
   border-radius: 5px;
 }
 
@@ -233,8 +233,8 @@
   //width: 250px;
   //height: 32px;
   font-size: 12px;
-  border-radius: 3px;
-  font-family: sans-serif;
+  border-radius: 6px;
+  // font-family: sans-serif;
   outline: none;
   touch-action: none;
   display: flex;
@@ -364,4 +364,11 @@
   border: 1px solid #87CAFF;
   border-radius: 5px; 
   font-size: 15px;
+}
+
+.main-sign-box {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 4px;
 }
