--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -1,9 +1,15 @@
+.content {
+  width: 100%;
+  height: 100%;
+}
 .content .skeleton-sign {
   //height: 102px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  // align-items: center;
+  // justify-content: center;
+  // flex-direction: column;
 }
 
 
@@ -25,4 +31,28 @@
   border-radius: 3px;
   border: none;
   color: black;
+}
+
+.stamp-content {
+  flex-basis: 33.33%;
+  background-color: #106DB6;
+  border-radius: 6px;
+  margin-right: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-info-content {
+  flex-basis: 66.66%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EBF8FF;
+  border-radius: 6px;
+  color: #106DB6;
+  // font-family: Lexend Deca !important;
+  font-size: 9px;
+  font-weight: 400;
+  letter-spacing: 0px;
 }
