Update giao diện theo design - màn tạo hđ đơn lẻ theo mẫu

--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.html
@@ -130,7 +130,7 @@
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract [datas]="datasForm" (onChangeValueText)="getValueText($event, d)" [signTemplate]="true" [sign]="d"
+                    <app-sign-contract class="main-sign-box" [datas]="datasForm" (onChangeValueText)="getValueText($event, d)" [signTemplate]="true" [sign]="d"
                     [contractNo]="contractNo"
                     ></app-sign-contract>
                 </div>
