--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -177,7 +177,7 @@
 
 // test
 .ck-da-keo {
-  border: 1px solid #106DB6;
+  border: 1px dashed #6B6B6B;
   border-radius: 5px;
 }
 
@@ -222,7 +222,7 @@
   //height: 32px;
   font-size: 12px;
   border-radius: 3px;
-  font-family: sans-serif;
+  // font-family: sans-serif;
   outline: none;
   touch-action: none;
   display: flex;
@@ -231,6 +231,7 @@
   color: rgba(27, 51, 91, 1);
   /* This makes things *much* easier */
   box-sizing: border-box;
+  border-radius: 6px;
   //padding: 10px;
   .name-sig-img-daky {
     position: absolute;
@@ -345,4 +346,10 @@
   text-overflow: ellipsis;
   overflow: hidden;
   width: inherit;
+}
+
+.main-sign-box {
+  width: 100%;
+  height: 100%;
+  padding: 4px;
 }
