--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
@@ -262,3 +262,10 @@ border-radius: 5px;
   cursor: pointer;
   margin: 5px 5px;
 }
+
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: inherit;
+}
