--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.scss
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.scss
@@ -170,7 +170,7 @@
 // test
 
 .ck-da-keo{
-  border: 1px solid #106DB6;
+  border: 1px dashed #6B6B6B;
   border-radius: 5px;
 }
 
@@ -210,8 +210,8 @@
   //width: 250px;
   //height: 32px;
   font-size: 12px;
-  border-radius: 3px;
-  font-family: sans-serif;
+  border-radius: 6px;
+  // font-family: sans-serif;
   outline: none;
   touch-action: none;
   display: flex;
@@ -363,4 +363,11 @@
   background: #FFFFFF;
   border: 1px solid #87CAFF;
   border-radius: 5px; 
+}
+
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: inherit;
 }
