--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
@@ -1,10 +1,14 @@
 <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
     <div class="skeleton-sign"  *ngIf="!checkShowEdit && !sign.valueSign">
-      <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
-      <!-- <span style="color: #106DB6;">{{sign.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh hoặc eKYC' : 'Chữ ký số'}}</span> -->
+      <div class="stamp-content">
+        <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
+          alt="mobifone.contract">
+      </div>
+    </div>
+    <div class="sign-info-content">
       <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
-      <ng-template #content>{{'sign.image.ekyc' |translate}}</ng-template>
-      <ng-template #other_content>{{'sign.digital'|translate}}</ng-template>
+      <ng-template #content>Thông tin chữ ký ảnh</ng-template>
+      <ng-template #other_content>Thông tin chữ ký số</ng-template>
     </div>
   </div>
   
