Cập nhật giao diện ô ký mới màn thêm/sửa mẫu HĐ

--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -127,7 +127,7 @@
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract-template [datas]="datas" [sign]="d"></app-sign-contract-template>
+                    <app-sign-contract-template class="main-sign-box" [datas]="datas" [sign]="d"></app-sign-contract-template>
                 </div>
             </div>
         </div>
