--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-contract-template.component.scss
@@ -64,7 +64,7 @@
   //height: 32px;
   font-size: 12px;
   border-radius: 3px;
-  font-family: sans-serif;
+  // font-family: sans-serif;
   outline: none;
   touch-action: none;
   display: flex;
@@ -174,7 +174,7 @@ z-index: 9;
 //height: 32px;
 font-size: 12px;
 border-radius: 3px;
-font-family: sans-serif;
+// font-family: sans-serif;
 outline: none;
 touch-action: none;
 display: flex;
@@ -220,8 +220,8 @@ box-sizing: border-box;
   border-radius: 2px;
 }
 .ck-da-keo {
-border: 1px solid #106DB6;
-border-radius: 5px;
+  border: 1px dashed #6B6B6B;
+  border-radius: 5px;
 }
 
 .footer-contract {
