--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -171,8 +171,8 @@
 
 // test
 .ck-da-keo {
-    border: 1px solid #106DB6;
-    border-radius: 5px;
+  border: 1px dashed #6B6B6B;
+  border-radius: 5px;
 }
 
 .staff-ck-da-keo {
@@ -216,7 +216,7 @@
     //height: 32px;
     font-size: 12px;
     border-radius: 3px;
-    font-family: sans-serif;
+    // font-family: sans-serif;
     outline: none;
     touch-action: none;
     display: flex;
@@ -225,6 +225,7 @@
     color: rgba(27, 51, 91, 1);
     /* This makes things *much* easier */
     box-sizing: border-box;
+    border-radius: 6px;
     //padding: 10px;
     .name-sig-img-daky {
         position: absolute;
@@ -715,4 +716,10 @@
   text-overflow: ellipsis;
   overflow: hidden;
   width: inherit;
+}
+
+.main-sign-box {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
