--- a/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -1,9 +1,8 @@
 .content {
-  //height: 102px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 4px;
 }
 
 .text-sign span {
@@ -12,4 +11,28 @@
   height: 25px;
   outline: none;
   color: #106DB6;
+}
+
+.stamp-content {
+  flex-basis: 33.33%;
+  background-color: #106DB6;
+  border-radius: 6px;
+  margin-right: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-info-content {
+  flex-basis: 66.66%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EBF8FF;
+  border-radius: 6px;
+  color: #106DB6;
+  // font-family: Lexend Deca !important;
+  font-size: 9px;
+  font-weight: 400;
+  letter-spacing: 0px;
 }
