--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.scss
@@ -46,7 +46,7 @@
   }
   
   .sign-info-content {
-    // flex-basis: 66.66%;
+    flex-basis: 66.66%;
     display: flex;
     align-items: center;
     justify-content: center;
