--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
-    <div class="skeleton-sign"  *ngIf="!checkShowEdit && !sign.valueSign">
-      <div class="stamp-content">
-        <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
-          alt="mobifone.contract">
-      </div>
+    <div class="stamp-content" *ngIf="!checkShowEdit && !sign.valueSign">
+      <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
+        alt="mobifone.contract">
     </div>
     <div class="sign-info-content">
       <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
