Fix hiển thị text dài ở màn preview ký hđ đơn lẻ

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -365,3 +365,10 @@
   border-radius: 5px; 
   font-size: 15px;
 }
+
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: inherit;
+}
