--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.html
@@ -124,7 +124,7 @@
                     <div *ngIf="d.sign_unit != 'text'" class="name-sig-img-daky text-ellipsis">{{d.name ? d.name : ''}}</div>
                     <div *ngIf="d.sign_unit == 'text'" class="name-sig-img-daky">{{d.text_attribute_name ? d.text_attribute_name  : ''}}</div>
                     <div class="sig-img-daky" (click)="onCancel($event, d)">
-                        <img src="assets/img/clear.svg" alt="">
+                        <!-- <img src="assets/img/clear.svg" alt=""> -->
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
                     <app-sign-contract-template class="main-sign-box" [datas]="datas" [sign]="d"></app-sign-contract-template>
