--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -10,11 +10,11 @@
     </div>
   </div>
 
-<div class="text-sign-not-template-text" *ngIf="(sign.sign_unit == 'text') && !signTemplate">
+<div class="text-sign-not-template-text set-center" *ngIf="(sign.sign_unit == 'text') && !signTemplate">
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
-<div class="text-sign-not-template-text" *ngIf="(sign.sign_unit == 'so_tai_lieu') && !signTemplate">
+<div class="text-sign-not-template-text set-center" *ngIf="(sign.sign_unit == 'so_tai_lieu') && !signTemplate">
   <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 </div>
 
