--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -58,7 +58,7 @@
                #itemElement
                
                [ngStyle]="changePosition(d)">
-            <div class="name-sig-img-daky">{{d.name}}</div>
+            <div class="name-sig-img-daky long-text-ellipsis">{{d.name}}</div>
             <app-image-sign-contract-template-detail  [datas]="datas" [sign]="d"></app-image-sign-contract-template-detail>
           </div>
         </div>
