--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -108,8 +108,8 @@
             [datas]="datas" [view]="[2,3].includes(recipient.status)" 
             [sign]="d">
           </app-image-sign-contract>
-          <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky text-ellipsis ">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
-          <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
+          <div *ngIf="this.flagFocus && d.sign_unit == 'text'" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
+          <div *ngIf="d.sign_unit != 'text' && !this.flagFocus" class="name-sig-img-daky long-text-ellipsis">{{(d.recipient && !d.valueSign) ? d.recipient.name : ''}}</div>
         </div>
       </div>
       <div class="skeleton-sign position-absolute opacity-0">
