--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,11 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
    padding:12px;
    margin: 0 auto;
 }
+
+.long-text-ellipsis {
+      overflow: hidden;
+    white-space: nowrap;
+    width: inherit;
+    text-overflow: ellipsis;
+    max-width: -webkit-fill-available;
+}
