Xóa border thừa - mẫu HĐ

--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -234,7 +234,7 @@
         top: -15px;
         left: 6px;
         padding: 0 4px;
-        border: 1px solid #ddd;
+        // border: 1px solid #ddd;
     }
     .sig-img-daky {
         cursor: pointer;
