fix ký usb token v2, thêm payload type

--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -8,12 +8,13 @@
 </div>
 
 <div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
-    <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+    <!-- <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
-    </div>
+    </div> -->
+    <div></div>
 </div>
 
 <!--usb token v1 có ảnh đóng dấu-->
@@ -37,13 +38,13 @@
     <div style="position: relative;">
         <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1;object-fit: contain">
     </div>
-    <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+    <!-- <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
         <div style="width: 165px;">
             <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
             <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
             <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
         </div>
-    </div>
+    </div> -->
 </div>
 
 <div class="signature-container" id="export-html-ekyc" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
