--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -588,26 +588,26 @@
 
 <div class="skeleton-sign position-absolute opacity-0">
     <div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
-      <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
+      <!-- <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
       <div class="signature-content"
           style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'sign_by_token' | translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
-      </div>
+      </div> -->
     </div>
 
     <div class="signature-container" id="export-html-image" style="width: 250px;min-height: 80px; display: flex; font-size: 9px;max-width: 300px">
         <div style="position: relative;">
             <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
         </div>
-        <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+        <!-- <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
             <div style="width: 165px;">
                 <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
                 <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
                 <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="export-html-hsm"  style="min-height: 80px;display: flex; font-size: 9px">
