Cập nhật, hoàn thiện giao diện mới của ô ký/ ô text

--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -5,8 +5,8 @@
     //position: relative;
     .sig-img-daky {
       position: absolute;
-      top: -11px;
-      right: -8px;
+      top: -20px;
+      right: -3px;
       //cursor: pointer;
     }
   }
@@ -189,7 +189,7 @@
 
 // test
 .ck-da-keo {
-  border: 1px dashed #6B6B6B;
+  border: 1px solid #106DB6;
   border-radius: 5px;
 }
 
@@ -233,7 +233,7 @@
   //width: 250px;
   //height: 32px;
   font-size: 12px;
-  border-radius: 6px;
+  border-radius: 3px;
   // font-family: sans-serif;
   outline: none;
   touch-action: none;
