--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.scss
@@ -38,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     background-color: #EBF8FF;
     border-radius: 6px;
     color: #106DB6;
