--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.scss
@@ -11,8 +11,8 @@
       //position: relative;
       .sig-img-daky{
         position: absolute;
-        top: -11px;
-        right: -8px;
+        top: -20px;
+        right: -3px;
         //cursor: pointer;
       }
   
@@ -356,7 +356,7 @@
       left: 6px;
       padding: 0 4px;
       border: 1px solid #ddd;
-      width: 100px;
+      // width: 100px;
   }
   .sig-img-daky {
       cursor: pointer;
@@ -385,7 +385,7 @@
     border-radius: 2px;
 }
 .ck-da-keo {
-  border: 1px dashed #6B6B6B;
+  border: 1px solid #106DB6;
   border-radius: 5px;
 }
 
