--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -4,8 +4,8 @@
         //position: relative;
         .sig-img-daky {
             position: absolute;
-            top: -11px;
-            right: -8px;
+            top: -20px;
+            right: -3px;
             //cursor: pointer;
         }
     }
@@ -171,7 +171,7 @@
 
 // test
 .ck-da-keo {
-  border: 1px dashed #6B6B6B;
+  border: 1px solid #106DB6;
   border-radius: 5px;
 }
 
@@ -225,7 +225,7 @@
     color: rgba(27, 51, 91, 1);
     /* This makes things *much* easier */
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 3px;
     //padding: 10px;
     .name-sig-img-daky {
         position: absolute;
