--- a/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/sample-contract-form/sample-contract-form.component.scss
@@ -5,8 +5,8 @@
     //position: relative;
     .sig-img-daky {
       position: absolute;
-      top: -11px;
-      right: -8px;
+      top: -20px;
+      right: -3px;
       //cursor: pointer;
     }
   }
@@ -177,7 +177,7 @@
 
 // test
 .ck-da-keo {
-  border: 1px dashed #6B6B6B;
+  border: 1px solid #106DB6;
   border-radius: 5px;
 }
 
@@ -231,7 +231,7 @@
   color: rgba(27, 51, 91, 1);
   /* This makes things *much* easier */
   box-sizing: border-box;
-  border-radius: 6px;
+  // border-radius: 6px;
   //padding: 10px;
   .name-sig-img-daky {
     position: absolute;
