--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,7 +110,7 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
   white-space: nowrap;
   width: inherit;
   text-overflow: ellipsis;
-  max-width: -webkit-fill-available;
+  max-width: 113px;
 }
 
 
