update trang thai N/A khi hd msale ko co du lieu

--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -75,7 +75,7 @@
 
                 <ng-container *ngIf="row > 0">
                     <td>{{list.typename}}</td>
-                    <td>{{list.quantity}}</td>
+                    <td>{{ list.na ? 'N/A' : list.quantity }}</td>
                 </ng-container>
             </tr>
         </ng-template>
