--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -21,7 +21,7 @@
 
 
     <!--Đẩy file hợp đồng lên BCT-->
-    <div *ngIf="this.ceca" class="row">
+    <div *ngIf=" environment.flag == 'NB' ? true : this.ceca" class="row">
       <div class="col-md-12">
         <div class="form-group">
           <div class="label_item">{{'contract-type.ceca' | translate}}</div>
