--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div *ngIf="this.ceca" class="form-group">
+    <div *ngIf=" environment.flag == 'NB' ? true : this.ceca" class="form-group">
       <div class="label_item">{{'contract-type.ceca' | translate}}<span class="require_star">*</span></div>
         <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
           optionValue="id" [showClear]="true">
