--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -144,7 +144,7 @@
     <div class="col-md-2"></div>
 
     <!--Đẩy lên ceca-->
-    <div *ngIf="this.ceca" class="col-md-5">
+    <div *ngIf="environment.flag == 'NB' ? true : this.ceca" class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'contract-type.ceca' | translate}}<span class="require_star">*</span></div>
           <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
