--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -25,12 +25,12 @@
     </div>
 
     <!--Loại hợp đồng-->
-    <div class="col-md-2">
+    <div class="col-md-3">
         <div>{{'contract.type' | translate}}</div>
         <div class="input-line">
-          <p-dropdown #typeContract optionValue="id" [(ngModel)]="type_id" placeholder="{{'all' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
-        </p-dropdown>
-        <!-- <p-multiSelect
+          <!-- <p-dropdown #typeContract optionValue="id" [(ngModel)]="type_id" placeholder="{{'all' | translate}}" [showClear]="true" [filter]="true" filterBy="name" [options]="typeList" optionLabel="name" >
+        </p-dropdown> -->
+        <p-multiSelect
         panelStyleClass="font"
         appendTo="body"
         [options]="typeList"
@@ -39,7 +39,7 @@
         [showClear]="true"  [multiple]="true"
         display="chip"
         >
-      </p-multiSelect> -->
+      </p-multiSelect>
         </div>
     </div>
 
@@ -52,7 +52,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;">
-    <p-table #dt [value]="list" [paginator]="true" [rows]="14" id="table" [autoLayout]="true"
+    <p-table #dt [value]="list" [paginator]="true" [rows]="10" id="table" [autoLayout]="true"
     [totalRecords]="this.totalRecords" [(first)]="this.first"
     >
 
