set default chọn tất cả loại hđ - báo cáo mSale

--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -35,7 +35,7 @@
         appendTo="body"
         [options]="typeList"
         [(ngModel)]="type_id"
-        optionLabel="name" optionValue="id" placeholder="{{'all' | translate}}" [filter]="true" filterBy="name"
+        optionLabel="name" optionValue="id" placeholder="Chọn loại hợp đồng" [filter]="true" filterBy="name"
         [showClear]="true"  [multiple]="true"
         display="chip"
         >
