--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.scss
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.scss
@@ -78,6 +78,8 @@ border-bottom-right-radius: 10px;
       width: 100%;
       outline: 0;
       color: black !important;
+      height: 36px;
+      align-items: center;
   }
   // .p-dropdown-label, .p-multiselect-label {
   //     padding: 5px 5px 5px 15px;
